fix: blur background no longer has gap on desktop

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -188,15 +188,16 @@ hr {
 	width: 100%;
 	z-index: 1;
 
-	/*backdrop-filter: blur(50px);*/
+	backdrop-filter: blur(50px);
 
 	/* Logo Side */
 	& #banner-left {
 		display: flex;
 		min-width: fit-content;
 
+		flex-grow: 1;
+
 		text-decoration: none;
-		backdrop-filter: blur(50px);
 
 		& .uml-logo {
 			display: block;
@@ -219,8 +220,6 @@ hr {
 	& #banner-right {
 		display: flex;
 		justify-content: flex-end;
-
-		backdrop-filter: blur(50px);
 
 		/* Darken background on hover */
 		& a:hover {
